--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,48 +1,25 @@
+
 @font-face {
-  font-family: "Montserrat-Light";
-  src: url("./Montserrat-Light.eot"); /* IE9 Compat Modes */
-  src: url("./Montserrat-Light.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("./Montserrat-Light.otf") format("opentype"), /* Open Type Font */
-    url("./Montserrat-Light.svg") format("svg"), /* Legacy iOS */
-    url("./Montserrat-Light.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("./Montserrat-Light.woff") format("woff"), /* Modern Browsers */
-    url("./Montserrat-Light.woff2") format("woff2"); /* Modern Browsers */
+  font-family: "Montserrat";
+  src: url("./Montserrat-Light.woff2") format("woff2"); /* Modern Browsers */
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
-  font-family: "Montserrat-Regular";
-  src: url("./Montserrat-Regular.eot"); /* IE9 Compat Modes */
-  src: url("./Montserrat-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("./Montserrat-Regular.otf") format("opentype"), /* Open Type Font */
-    url("./Montserrat-Regular.svg") format("svg"), /* Legacy iOS */
-    url("./Montserrat-Regular.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("./Montserrat-Regular.woff") format("woff"), /* Modern Browsers */
-    url("./Montserrat-Regular.woff2") format("woff2"); /* Modern Browsers */
+  font-family: "Montserrat";
+  src: url("./Montserrat-Regular.woff2") format("woff2"); /* Modern Browsers */
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
-  font-family: "Montserrat-SemiBold";
-  src: url("./Montserrat-SemiBold.eot"); /* IE9 Compat Modes */
-  src: url("./Montserrat-SemiBold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("./Montserrat-SemiBold.otf") format("opentype"), /* Open Type Font */
-    url("./Montserrat-SemiBold.svg") format("svg"), /* Legacy iOS */
-    url("./Montserrat-SemiBold.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("./Montserrat-SemiBold.woff") format("woff"), /* Modern Browsers */
-    url("./Montserrat-SemiBold.woff2") format("woff2"); /* Modern Browsers */
+  font-family: "Montserrat";
+  src: url("./Montserrat-SemiBold.woff2") format("woff2"); /* Modern Browsers */
   font-weight: 600;
   font-style: normal;
 }
 @font-face {
-  font-family: "Montserrat-Bold";
-  src: url("./Montserrat-Bold.eot"); /* IE9 Compat Modes */
-  src: url("./Montserrat-Bold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("./Montserrat-Bold.otf") format("opentype"), /* Open Type Font */
-    url("./Montserrat-Bold.svg") format("svg"), /* Legacy iOS */
-    url("./Montserrat-Bold.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("./Montserrat-Bold.woff") format("woff"), /* Modern Browsers */
-    url("./Montserrat-Bold.woff2") format("woff2"); /* Modern Browsers */
+  font-family: "Montserrat";
+  src: url("./Montserrat-Bold.woff2") format("woff2"); /* Modern Browsers */
   font-weight: 700;
   font-style: normal;
 }
