--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,13 @@
 }
 .body {
     max-width: 1440px;
+    min-width: 768px;
     font-family: "Montserrat";
     margin: 0;
     padding: 0;
 }
 .header {
-    width: 1440px;
+    max-width: 1440px;
 }
 .container {
     max-width: 1440px;
@@ -36,7 +37,7 @@
     color: #000000;
 }
 .nav__menu-s:hover {
-    color: #E51937;
+    color: #e51937;
     background-image: url(/images/underlining.png);
     background-size: contain;
     background-repeat: no-repeat;
@@ -55,7 +56,7 @@
     line-height: 18px;
 }
 .nav__menu-x:hover {
-    color: #E51937;
+    color: #e51937;
     background-image: url(/images/underlining.png);
     background-size: contain;
     background-repeat: no-repeat;
@@ -74,7 +75,7 @@
     line-height: 18px;
 }
 .nav__menu-3:hover {
-    color: #E51937;
+    color: #e51937;
     background-image: url(/images/underlining.png);
     background-size: contain;
     background-repeat: no-repeat;
@@ -93,7 +94,7 @@
     line-height: 18px;
 }
 .nav__menu-roadster:hover {
-    color: #E51937;
+    color: #e51937;
     background-image: url(/images/underlining.png);
     background-size: contain;
     background-repeat: no-repeat;
@@ -113,7 +114,7 @@
     line-height: 18px;
 }
 .nav__menu-energy:hover {
-    color: #E51937;
+    color: #e51937;
     background-image: url(/images/underlining.png);
     background-size: contain;
     background-repeat: no-repeat;
@@ -137,7 +138,7 @@
     line-height: 18px;
 }
 .menu__item:hover {
-    color: #E51937;
+    color: #e51937;
     background-image: url(/images/underlining.png);
     background-size: contain;
     background-repeat: no-repeat;
@@ -146,7 +147,6 @@
 }
 .menu__img-burger {
     margin-top: 24px;
-    margin-right: 60px;
 }
 .menu__img-burger:active {
     color: yellow;
@@ -224,7 +224,7 @@
     font-size: 13px;
     line-height: 16px;
     text-transform: uppercase;
-    margin-right: 40px;    
+    margin-right: 40px;
 }
 .order {
     padding: 10px;
@@ -233,13 +233,13 @@
     font-weight: "Bold";
     width: 160px;
     height: 40px;
-    border: 2px solid #E51937;
+    border: 2px solid #e51937;
     box-sizing: border-box;
     font-size: 13px;
     line-height: 16px;
     text-align: center;
     text-transform: uppercase;
-    color: #E51937;
+    color: #e51937;
 }
 .order:hover {
     cursor: pointer;
@@ -256,14 +256,17 @@
     cursor: pointer;
 }
 .main {
+    min-width: 1440px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 .main__inner {
     display: flex;
     justify-content: space-between;
     width: 100%;
     background-image: url(../images/2013-tesla-model-s-cockpit.png);
+    background-position-y: 60px;
+    background-repeat: no-repeat;
 }
 .left-section {
     width: 1000px;
@@ -274,13 +277,13 @@
     font-weight: "SemiBold";
     font-size: 70px;
     line-height: 85px;
-    color: #E51937;
+    color: #e51937;
     margin-left: 80px;
 }
 .right-section {
     width: 440px;
-    height: 844px;
-    background: #E51937;
+    height: 900px;
+    background: #e51937;
     color: #ffffff;
 }
 .main-top {
@@ -302,6 +305,7 @@
     font-size: 15px;
     line-height: 18px;
     margin-bottom: 54px;
+    margin-right: 72px;
 }
 .right-section__img {
     flex-direction: column;
@@ -368,13 +372,13 @@
     text-transform: uppercase;
 }
 .footer {
-    width: 1440px;
+    max-width: 1440px;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
 }
 .footer__left {
-    width: 447px;
+    min-width: 445px;
     height: 950px;
     background-image: url(/images/Red-bg.png);
     color: #ffffff;
@@ -435,7 +439,7 @@
     flex-direction: row;
     margin-left: 56px;
     margin-right: 94px;
-    margin-bottom: 111px;   
+    margin-bottom: 111px;
 }
 .rating__add {
     font-family: "Montserrat";
@@ -504,7 +508,7 @@
     text-transform: uppercase;
 }
 .footer__right {
-    width: 993px;
+    min-width: 995px;
 }
 .footer__right-title {
     position: relative;
@@ -516,11 +520,9 @@
     font-size: 195px;
     line-height: 225px;
     opacity: 0.15;
-    color: #E51937;
+    color: #e51937;
 }
 .right-pc__img {
-    width: 1049px;
-    height: 540px;
     position: relative;
     bottom: 425px;
     right: 100px;
@@ -536,4 +538,243 @@
 }
 .right-ipad__img {
     display: none;
+}
+@media (max-width: 375px) {
+    .body {
+        max-width: 375px;
+    }
+    .header {
+        max-width: 375px;
+    }
+    .container {
+        max-width: 375px;
+    }
+    .nav {
+        display: flex;
+        justify-content: space-between;
+    }
+    .nav__logo {
+        margin: 0 auto;
+    }
+    .nav__menu-s {
+        display: none;
+    }
+    .nav__menu-x {
+        display: none;
+    }
+    .nav__menu-3 {
+        display: none;
+    }
+    .nav__menu-roadster {
+        display: none;
+    }
+    .nav__menu-energy {
+        display: none;
+    }
+    .menu {
+        width: 375px;
+        margin: 0 9px;
+    }
+    .menu__item {
+        display: none;
+    }
+    .menu__img-burger {
+        margin-left: 190px;
+        padding-bottom: 25px;
+    }
+    .tesla-title {
+        display: block;
+        background-image: url(/images/Tesla-Wordmark-Red-mobi.png);
+        background-size: auto;
+        background-repeat: no-repeat;
+        background-position: 0px 15%;
+        background-position-y: 65px;
+    }
+    .tesla-title__subtitle {
+        font-family: "Montserrat";
+        font-size: 50px;
+        font-style: "normal";
+        font-weight: "SemiBold";
+        line-height: 61px;
+        letter-spacing: 0em;
+        text-align: center;
+    }
+    .tesla-title__desk {
+        font-family: "Montserrat";
+        font-style: "normal";
+        font-weight: "Regular";
+        font-size: 10px;
+        line-height: 12px;
+    }
+    .tesla-title__car-pc {
+        display: none;
+    }
+    .tesla-title__car-mobi {
+        display: initial;
+        text-align: center;
+    }
+    .tesla-info-block {
+        display: flex;
+        flex-direction: column;
+    }
+    .info-block__img-pc {
+        display: none;
+    }
+    .info-block__img-ipad {
+        display: none;
+    }
+    .info-block {
+        display: flex;
+        justify-content: space-around;
+        flex-direction: row;
+        margin-bottom: 43px;
+    }
+    .info-block__mobile-right {
+        display: initial;
+    }
+    .info-block__mobile-left {
+        display: initial;
+    }
+    .test-drive {
+        display: flex;
+        justify-content: center;
+    }
+    .test-drive__responsive {
+        display: none;
+    }
+    .test-drive__mobile {
+        display: initial;
+        margin-right: 8px;
+    }
+    .test-drive__desk {
+        color:#e51937;
+    }
+    .order {
+        color: #ffffff;
+        background-color:#e51937;
+    }
+    .go-bottom {
+        display: flex;
+        justify-content: center;
+        margin-left: 20px;
+    }
+    .main {
+        max-width: 375px;
+    }
+    .main__inner {
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column-reverse;
+        background-image: none;
+    }
+    .left-section__img {
+        display: flex;
+        background-image: url(images/ModelS-mobi.png);
+    }
+    .left-section__title {
+        display: none;
+    }
+    .right-section {
+        height: 304px;
+        width: 374px;
+    }
+    .main-top {
+        margin-left: 30px;
+    }
+    .right-section__title {
+        margin-top: 18px;
+        line-height: 35px;
+        font-size: 28px;
+    }
+    .right-section__text {
+        margin-bottom: 34px;
+        font-size: 13px;
+    }
+    .right-section__img {
+        display: none;
+    }
+    .features {
+        display: none;
+    }
+    .footer {
+        width: 375px;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .footer__left {
+        height: 304px;
+        width: 375px;
+        background-image: url(../images/bg-footer-red-mobi.png);
+    }
+    .footer__left-head {
+        height: 304px;
+    }
+    .footer__title {
+        font-family: "Montserrat";
+        font-size: 30px;
+        font-style: "normal";
+        font-weight: "SemiBold";
+        line-height: 37px;
+        letter-spacing: 0em;
+    }
+    .footer__text {
+        font-family: "Montserrat";
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 18px;
+        letter-spacing: 0em;
+        text-align: left;
+    }
+    .footer__left-body {
+        display: none;
+    }
+    .rating {
+        display: none;
+    }
+    .rating-second {
+        display: none;
+    }
+    .security {
+        display: none;
+    }
+    .footer-info__order {
+        display: none;
+    }
+    .footer__right {
+        width: 375px;
+        height: 300px;
+    }
+    .right-pc {
+        display: none;
+    }
+    .right-pc__img {
+        display: none;
+    }
+    .right-ipad {
+        display: none;
+    }
+    .right-mobi {
+        width: 375px;
+        position: relative;
+        display: initial;
+        bottom: 320px;
+    }
+    .right-mobi__img {
+        margin-left: 20px;
+        margin-top: 60px;
+        display: initial;
+    }
+    .footer__right-title {
+        font-family: "Montserrat";
+        font-size: 105px;
+        font-style: "normal";
+        font-weight: "SemiBold";
+        line-height: 122px;
+        letter-spacing: 0em;
+        opacity: 0.1;
+        position: relative;
+        text-align: left;
+        top: 250px;
+    }
 }
