--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 * {
     box-sizing: border-box;
+    margin:0; 
+    padding:0; 
 }
 .body {
     max-width: 1440px;
-    min-width: 768px;
     font-family: "Montserrat";
     margin: 0;
     padding: 0;
@@ -16,6 +17,8 @@
     margin-bottom: 40px;
 }
 .nav {
+    margin: 0;
+    padding: 0;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -158,7 +161,7 @@
 .tesla-title {
     display: block;
     background-image: url(/images/Tesla-Wordmark-Red-1.png);
-    background-size: auto;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: 0px 15%;
 }
@@ -181,7 +184,8 @@
     margin-bottom: 26px;
 }
 .tesla-title__car-pc {
-    margin-left: 199px;
+    display: flex;
+    margin: 0 auto;
     margin-bottom: 26px;
 }
 .tesla-title__car-mobi {
@@ -225,6 +229,7 @@
     line-height: 16px;
     text-transform: uppercase;
     margin-right: 40px;
+    margin-top: 9px;
 }
 .order {
     padding: 10px;
@@ -256,9 +261,11 @@
     cursor: pointer;
 }
 .main {
-    min-width: 1440px;
+    max-width: 1440px;
     display: flex;
     flex-direction: row;
+    margin:0; 
+    padding:0; 
 }
 .main__inner {
     display: flex;
@@ -345,6 +352,7 @@
     opacity: 0.1;
 }
 .features-info__desk {
+    margin-top: 9px;
     margin-right: 22px;
     font-family: "Montserrat";
     font-style: "normal";
@@ -366,6 +374,7 @@
     border: 2px solid yellow;
 }
 .features__order-desk {
+    margin-top: 9px;
     font-family: "Montserrat";
     font-style: "normal";
     font-weight: "Bold";
@@ -379,6 +388,8 @@
     display: flex;
     justify-content: space-between;
     flex-direction: row;
+    margin:0; 
+    padding:0; 
 }
 .footer__left {
     min-width: 445px;
@@ -481,6 +492,7 @@
     opacity: 0.1;
 }
 .footer-info__desk {
+    margin-top: 9px;
     margin-right: 22px;
     font-family: "Montserrat";
     font-style: "normal";
@@ -502,6 +514,7 @@
     cursor: pointer;
 }
 .footer__order-desk {
+    margin-top: 9px;
     font-family: "Montserrat";
     font-style: "normal";
     font-weight: "Bold";
@@ -515,19 +528,18 @@
 }
 .footer__right-title {
     position: relative;
-    bottom: 75px;
+    top: 160px;
     text-align: right;
     font-family: "Montserrat";
     font-style: "normal";
     font-weight: "SemiBold";
-    font-size: 195px;
-    line-height: 225px;
+    font-size: 200px;
+    line-height: 243px;
     opacity: 0.15;
     color: #e51937;
 }
 .right-pc__img {
     position: relative;
-    bottom: 425px;
     right: 100px;
 }
 .right-mobi {
@@ -545,6 +557,9 @@
 @media (max-width: 375px) {
     .body {
         max-width: 375px;
+        min-width: 375px;
+        margin: 0;
+        padding: 0;
     }
     .header {
         max-width: 375px;
@@ -557,12 +572,12 @@
         justify-content: space-between;
     }
     .nav__logo {
-        margin: 0;
         width: 138px;
         height: 42px;
         left: 2px;
         top: 75px;
         margin-top: 5px;
+        margin-right: 190px;
     }
     .nav__menu-s {
         display: none;
@@ -580,15 +595,14 @@
         display: none;
     }
     .menu {
-        width: 375px;
-        margin: 0 9px;
+        max-width: 375px;
     }
     .menu__item {
         display: none;
     }
     .menu__img-burger {
-        margin-left: 130px;
-        padding-bottom: 23px;
+        position: relative;
+        bottom: 9px;
     }
     .tesla-title {
         display: block;
@@ -634,7 +648,7 @@
     .info-block {
         display: flex;
         justify-content: space-around;
-        flex-direction: row;
+        flex-direction: row-reverse;
         margin-bottom: 43px;
     }
     .info-block__mobile-right {
@@ -771,7 +785,7 @@
         width: 375px;
         position: relative;
         display: initial;
-        bottom: 320px;
+        bottom: 120px;
     }
     .right-mobi__img {
         margin-left: 20px;
@@ -780,7 +794,7 @@
     }
     .footer__right-title {
         font-family: "Montserrat";
-        font-size: 95px;
+        font-size: 100px;
         font-style: "normal";
         font-weight: "SemiBold";
         line-height: 122px;
@@ -788,6 +802,6 @@
         opacity: 0.1;
         position: relative;
         text-align: left;
-        top: 250px;
+        top: 150px;
     }
 }
