--- a/css/style.css
+++ b/css/style.css
@@ -21,20 +21,22 @@
     display: flex;
     flex-direction: row;
     margin-bottom: 4.13%;
+    justify-content: space-around;
 }
 .nav__logo {
     display: block;
     display: flex;
     margin-top: 1.55%;
-    margin-left: 2.9%;
+    /* margin-left: 2.9%; */
     width: 166px;
     height: 51px;
 }
 .nav__menu {
     margin-top: 2.69%;
     display: flex;
-    margin-left: 18%;
-    white-space: nowrap;
+    justify-content: space-between;
+    /* margin-left: 18%; */
+    /* white-space: nowrap; */
 }
 .nav__menu-s {
     font-family: "Montserrat";
@@ -60,7 +62,7 @@
     color: #000000;
     font-size: 15px;
     line-height: 19px;
-    margin-left: 19.7%;
+    /* margin-right: 19.7%; */
 }
 .nav__menu-x:hover {
     color: #e51937;
@@ -77,7 +79,7 @@
     color: #000000;
     font-size: 15px;
     line-height: 18px;
-    margin-left: 8%;
+    /* margin-left: 8%; */
     margin-top: 0.1%;
 }
 .nav__menu-3:hover {
@@ -95,7 +97,7 @@
     color: #000000;
     font-size: 15px;
     line-height: 18px;
-    margin-left: 13.5%;
+    /* margin-left: 13.5%; */
     margin-top: 0.1%;
 }
 .nav__menu-roadster:hover {
@@ -114,7 +116,7 @@
     color: #000000;
     font-size: 15px;
     line-height: 18px;
-    margin-left: 14.6%;
+    /* margin-left: 14.6%; */
     margin-top: 0.1%;
 }
 .nav__menu-energy:hover {
@@ -128,7 +130,7 @@
 .menu {
     margin-top: 2.8%;
     display: flex;
-    margin-left: 25.7%;
+    /* margin-left: 25.7%; */
 }
 .menu__item {
     font-family: "Montserrat";
@@ -137,7 +139,7 @@
     color: #000000;
     font-size: 15px;
     line-height: 18px;
-    margin-left: 18.6%;
+    /* margin-left: 18.6%; */
 }
 .menu__item:hover {
     color: #e51937;
@@ -148,9 +150,9 @@
     cursor: pointer;
 }
 .menu__img-burger {
-    position: relative;
-    bottom: 28%;
-    left: 21.8%;
+    /* position: relative;
+    bottom: 28%; */
+    /* left: 21.8%; */
 }
 .menu__img-burger:active {
     color: yellow;
@@ -181,13 +183,14 @@
     font-weight: "Regular";
     font-size: 15px;
     line-height: 4px;
-    margin-bottom: 2.3%;
+    /* margin-bottom: 2.3%; */
 }
 .tesla-title__car-pc {
     display: flex;
-    margin-left: 13.9%;
-    margin-bottom: 1.69%;
-    max-width: 100vmax;
+    justify-content: center;
+    /* margin-left: 13.9%; */
+    /* margin-bottom: 1.69%; */
+    /* max-width: 100vmax; */
 }
 .tesla-title__car-mobi {
     display: none;
