--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,24 +1,24 @@
 @font-face {
-  font-family: "Montserrat";
+  font-family: Montserrat;
   src: url("./Montserrat-Light.woff2") format("woff2"); /* Modern Browsers */
-  font-weight: "Light";
+  font-weight: Light;
   font-style: normal;
 }
 @font-face {
-  font-family: "Montserrat";
+  font-family: Montserrat;
   src: url("./Montserrat-Regular.woff2") format("woff2"); /* Modern Browsers */
-  font-weight: "Regular";
+  font-weight: Regular;
   font-style: normal;
 }
 @font-face {
-  font-family: "Montserrat";
+  font-family: Montserrat;
   src: url("./Montserrat-SemiBold.woff2") format("woff2"); /* Modern Browsers */
-  font-weight: "SemiBold";
+  font-weight: SemiBold;
   font-style: normal;
 }
 @font-face {
-  font-family: "Montserrat";
+  font-family: Montserrat;
   src: url("./Montserrat-Bold.woff2") format("woff2"); /* Modern Browsers */
-  font-weight: "Bold";
+  font-weight: Bold;
   font-style: normal;
 }
